@@ -9,9 +9,13 @@ import id.co.blackheart.model.Trades;
 import id.co.blackheart.repository.AccountRepository;
 import id.co.blackheart.repository.TradesRepository;
 import id.co.blackheart.service.cache.CacheService;
+import id.co.blackheart.service.statistics.GeometricReturnCalculator;
+import id.co.blackheart.util.DateTimeUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
@@ -22,7 +26,6 @@ import java.time.LocalTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -47,11 +50,11 @@ public class PnlService {
         List<Trades> open = tradesRepository.findOpenByAccountIds(accountIds);
 
         BigDecimal realizedPnl = closed.stream()
-                .map(t -> t.getRealizedPnlAmount() != null ? t.getRealizedPnlAmount() : BigDecimal.ZERO)
+                .map(t -> ObjectUtils.isNotEmpty(t.getRealizedPnlAmount()) ? t.getRealizedPnlAmount() : BigDecimal.ZERO)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         long wins = closed.stream()
-                .filter(t -> t.getRealizedPnlAmount() != null && t.getRealizedPnlAmount().compareTo(BigDecimal.ZERO) > 0)
+                .filter(t -> ObjectUtils.isNotEmpty(t.getRealizedPnlAmount()) && t.getRealizedPnlAmount().compareTo(BigDecimal.ZERO) > 0)
                 .count();
 
         BigDecimal winRate = closed.isEmpty() ? BigDecimal.ZERO
@@ -59,6 +62,8 @@ public class PnlService {
 
         BigDecimal unrealizedPnl = computeUnrealizedPnl(open);
         BigDecimal totalPnl = realizedPnl.add(unrealizedPnl);
+
+        GeometricReturnCalculator.Result tr = computePerTradeReturnStats(closed);
 
         return PnlSummaryResponse.builder()
                 .period(period)
@@ -68,7 +73,29 @@ public class PnlService {
                 .tradeCount(closed.size())
                 .winRate(winRate)
                 .openCount(open.size())
+                .avgTradeReturnPct(tr.avgTradeReturnPct())
+                .geometricReturnPctAtAlloc90(tr.geometricReturnPct())
                 .build();
+    }
+
+    /**
+     * Per-trade return stats over the closed-trade slice. Sorts by entry time
+     * so the geometric compound walks the live sequence rather than whatever
+     * order the repo returned (defensive — repo currently sorts but we don't
+     * want this method to break if that changes). Trades with non-positive
+     * notional are skipped inside the calculator.
+     */
+    private GeometricReturnCalculator.Result computePerTradeReturnStats(List<Trades> closed) {
+        if (ObjectUtils.isEmpty(closed)) {
+            return GeometricReturnCalculator.Result.zero();
+        }
+        List<GeometricReturnCalculator.TradeReturn> series = closed.stream()
+                .sorted(Comparator.comparing(Trades::getEntryTime,
+                        Comparator.nullsLast(Comparator.naturalOrder())))
+                .map(t -> new GeometricReturnCalculator.TradeReturn(
+                        t.getRealizedPnlAmount(), t.getTotalEntryQuoteQty()))
+                .toList();
+        return GeometricReturnCalculator.compute(series);
     }
 
     public List<DailyPnlResponse> getDaily(UUID userId, LocalDate from, LocalDate to, String strategyCode) {
@@ -78,10 +105,10 @@ public class PnlService {
 
         List<Trades> closed = tradesRepository.findClosedInPeriodByAccountIds(accountIds, fromDt, toDt);
 
-        if (strategyCode != null && !strategyCode.isBlank()) {
+        if (StringUtils.hasText(strategyCode)) {
             closed = closed.stream()
                     .filter(t -> strategyCode.equalsIgnoreCase(t.getStrategyName()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         Map<String, List<Trades>> byDate = new TreeMap<>();
@@ -99,19 +126,19 @@ public class PnlService {
                     .realizedPnl(pnl.setScale(8, RoundingMode.HALF_UP))
                     .tradeCount(e.getValue().size())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public List<StrategyPnlResponse> getByStrategy(UUID userId, LocalDate from, LocalDate to) {
         List<UUID> accountIds = getAccountIds(userId);
-        LocalDateTime fromDt = (from != null) ? from.atStartOfDay() : LocalDateTime.of(2020, 1, 1, 0, 0);
-        LocalDateTime toDt = (to != null) ? to.atTime(LocalTime.MAX) : LocalDateTime.now(ZoneOffset.UTC);
+        LocalDateTime fromDt = (ObjectUtils.isNotEmpty(from)) ? from.atStartOfDay() : LocalDateTime.of(2020, 1, 1, 0, 0);
+        LocalDateTime toDt = (ObjectUtils.isNotEmpty(to)) ? to.atTime(LocalTime.MAX) : LocalDateTime.now(ZoneOffset.UTC);
 
         List<Trades> closed = tradesRepository.findClosedInPeriodByAccountIds(accountIds, fromDt, toDt);
 
         Map<String, List<Trades>> byStrategy = new TreeMap<>();
         for (Trades t : closed) {
-            String code = t.getStrategyName() != null ? t.getStrategyName() : "UNKNOWN";
+            String code = ObjectUtils.isNotEmpty(t.getStrategyName()) ? t.getStrategyName() : "UNKNOWN";
             byStrategy.computeIfAbsent(code, k -> new ArrayList<>()).add(t);
         }
 
@@ -125,13 +152,16 @@ public class PnlService {
                     .count();
             BigDecimal winRate = list.isEmpty() ? BigDecimal.ZERO
                     : BigDecimal.valueOf(wins).divide(BigDecimal.valueOf(list.size()), 4, RoundingMode.HALF_UP).multiply(HUNDRED);
+            GeometricReturnCalculator.Result tr = computePerTradeReturnStats(list);
             return StrategyPnlResponse.builder()
                     .strategyCode(e.getKey())
                     .realizedPnl(pnl.setScale(8, RoundingMode.HALF_UP))
                     .tradeCount(list.size())
                     .winRate(winRate)
+                    .avgTradeReturnPct(tr.avgTradeReturnPct())
+                    .geometricReturnPctAtAlloc90(tr.geometricReturnPct())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     /**
@@ -164,7 +194,7 @@ public class PnlService {
             return Collections.emptyList();
         }
 
-        BigDecimal baseline = (initialCapital != null && initialCapital.signum() > 0)
+        BigDecimal baseline = (ObjectUtils.isNotEmpty(initialCapital) && initialCapital.signum() > 0)
                 ? initialCapital
                 : DEFAULT_INITIAL_CAPITAL;
 
@@ -175,53 +205,16 @@ public class PnlService {
 
         // Walk all closed trades up to `to` so cumulative pnl is accurate at the
         // window's start; only emit points whose exit time falls inside the window.
-        BigDecimal cumulative = BigDecimal.ZERO;
-        BigDecimal cumulativeAtFrom = BigDecimal.ZERO;
-        boolean fromBoundaryRecorded = false;
-        List<EquityPointResponse> points = new ArrayList<>();
-        BigDecimal peak = baseline;
-
+        EquityCurveState state = new EquityCurveState(baseline);
         for (Trades t : closed) {
-            BigDecimal pnl = t.getRealizedPnlAmount() != null ? t.getRealizedPnlAmount() : BigDecimal.ZERO;
-            LocalDateTime exit = t.getExitTime();
-            if (exit == null) continue;
-
-            // Carry pnl that closed BEFORE the window into the starting baseline.
-            if (exit.isBefore(fromDt)) {
-                cumulative = cumulative.add(pnl);
-                continue;
-            }
-
-            // First trade in-window: anchor a point at `from` representing the
-            // equity right at the window's left edge.
-            if (!fromBoundaryRecorded) {
-                cumulativeAtFrom = cumulative;
-                BigDecimal equityAtFrom = baseline.add(cumulativeAtFrom);
-                if (equityAtFrom.compareTo(peak) > 0) peak = equityAtFrom;
-                points.add(EquityPointResponse.builder()
-                        .time(fromMs)
-                        .equity(equityAtFrom.setScale(8, RoundingMode.HALF_UP))
-                        .drawdown(percentDrop(equityAtFrom, peak))
-                        .build());
-                fromBoundaryRecorded = true;
-            }
-
-            cumulative = cumulative.add(pnl);
-            BigDecimal equity = baseline.add(cumulative);
-            if (equity.compareTo(peak) > 0) peak = equity;
-
-            points.add(EquityPointResponse.builder()
-                    .time(exit.toInstant(ZoneOffset.UTC).toEpochMilli())
-                    .equity(equity.setScale(8, RoundingMode.HALF_UP))
-                    .drawdown(percentDrop(equity, peak))
-                    .build());
+            applyTrade(state, t, baseline, fromDt, fromMs);
         }
 
         // No trades closed in-window: emit a flat anchor so the chart still has
         // something to draw at the requested baseline.
-        if (!fromBoundaryRecorded) {
-            BigDecimal equityAtFrom = baseline.add(cumulative);
-            points.add(EquityPointResponse.builder()
+        if (!state.fromBoundaryRecorded) {
+            BigDecimal equityAtFrom = baseline.add(state.cumulative);
+            state.points.add(EquityPointResponse.builder()
                     .time(fromMs)
                     .equity(equityAtFrom.setScale(8, RoundingMode.HALF_UP))
                     .drawdown(BigDecimal.ZERO.setScale(4, RoundingMode.HALF_UP))
@@ -229,16 +222,68 @@ public class PnlService {
         }
 
         // Trailing anchor at `to` so the line extends to the right edge of the window.
-        EquityPointResponse last = points.get(points.size() - 1);
+        EquityPointResponse last = state.points.get(state.points.size() - 1);
         if (!Objects.equals(last.getTime(), toMs)) {
-            points.add(EquityPointResponse.builder()
+            state.points.add(EquityPointResponse.builder()
                     .time(toMs)
                     .equity(last.getEquity())
                     .drawdown(last.getDrawdown())
                     .build());
         }
 
-        return points;
+        return state.points;
+    }
+
+    private void applyTrade(EquityCurveState state, Trades t, BigDecimal baseline,
+                            LocalDateTime fromDt, long fromMs) {
+        LocalDateTime exit = t.getExitTime();
+        if (ObjectUtils.isEmpty(exit)) return;
+        BigDecimal pnl = ObjectUtils.isNotEmpty(t.getRealizedPnlAmount()) ? t.getRealizedPnlAmount() : BigDecimal.ZERO;
+
+        // Carry pnl that closed BEFORE the window into the starting baseline.
+        if (exit.isBefore(fromDt)) {
+            state.cumulative = state.cumulative.add(pnl);
+            return;
+        }
+
+        recordWindowEdge(state, baseline, fromMs);
+
+        state.cumulative = state.cumulative.add(pnl);
+        BigDecimal equity = baseline.add(state.cumulative);
+        if (equity.compareTo(state.peak) > 0) state.peak = equity;
+
+        state.points.add(EquityPointResponse.builder()
+                .time(DateTimeUtil.toEpochMillisUtc(exit))
+                .equity(equity.setScale(8, RoundingMode.HALF_UP))
+                .drawdown(percentDrop(equity, state.peak))
+                .build());
+    }
+
+    /**
+     * First trade in-window: anchor a point at {@code from} representing the
+     * equity right at the window's left edge. No-op on subsequent calls.
+     */
+    private void recordWindowEdge(EquityCurveState state, BigDecimal baseline, long fromMs) {
+        if (state.fromBoundaryRecorded) return;
+        BigDecimal equityAtFrom = baseline.add(state.cumulative);
+        if (equityAtFrom.compareTo(state.peak) > 0) state.peak = equityAtFrom;
+        state.points.add(EquityPointResponse.builder()
+                .time(fromMs)
+                .equity(equityAtFrom.setScale(8, RoundingMode.HALF_UP))
+                .drawdown(percentDrop(equityAtFrom, state.peak))
+                .build());
+        state.fromBoundaryRecorded = true;
+    }
+
+    private static final class EquityCurveState {
+        BigDecimal cumulative = BigDecimal.ZERO;
+        BigDecimal peak;
+        boolean fromBoundaryRecorded = false;
+        final List<EquityPointResponse> points = new ArrayList<>();
+
+        EquityCurveState(BigDecimal baseline) {
+            this.peak = baseline;
+        }
     }
 
     private BigDecimal percentDrop(BigDecimal equity, BigDecimal peak) {
@@ -256,7 +301,7 @@ public class PnlService {
         for (Trades t : openTrades) {
             try {
                 BigDecimal price = cacheService.getLatestPrice(t.getAsset());
-                if (price == null || t.getAvgEntryPrice() == null || t.getTotalRemainingQty() == null) continue;
+                if (ObjectUtils.isEmpty(price) || ObjectUtils.isEmpty(t.getAvgEntryPrice()) || ObjectUtils.isEmpty(t.getTotalRemainingQty())) continue;
                 BigDecimal pnl;
                 if ("SHORT".equalsIgnoreCase(t.getSide())) {
                     pnl = t.getAvgEntryPrice().subtract(price).multiply(t.getTotalRemainingQty());
@@ -274,7 +319,7 @@ public class PnlService {
     private List<UUID> getAccountIds(UUID userId) {
         return accountRepository.findByUserId(userId).stream()
                 .map(Account::getAccountId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private LocalDateTime[] periodRange(String period) {
@@ -282,7 +327,7 @@ public class PnlService {
         LocalDateTime from;
         switch (period.toLowerCase()) {
             case "week":
-                from = now.toLocalDate().atStartOfDay().minusDays(now.getDayOfWeek().getValue() - 1);
+                from = now.toLocalDate().atStartOfDay().minusDays((long) now.getDayOfWeek().getValue() - 1);
                 break;
             case "month":
                 from = now.toLocalDate().withDayOfMonth(1).atStartOfDay();
